--- a/chap-bunching.qmd
+++ b/chap-bunching.qmd
@@ -17,10 +17,11 @@ The interface ...
 These are the main settings for the analysis.
 
 - **Variable:** ...
-- **Tests:** ...
+- **Tests: Average frequency** ...
+- **Tests: Entropy** ...
 - **Shuffle decimal digits:** ...
-- **Explanatory text:** ...
-  + **Confidence:** ...
+- **Display: Explanatory text:** ...
+- **Display: Confidence:** ...
 
 ## Main output
 
@@ -32,27 +33,19 @@ The following settings enable you to expand the report with additional output, s
 
 ![](img/bunching/bunching-4.png){fig-align="center" width=75%}
 
-### Tables
-
-The following tables can be requested in the 'Report' section of the interface.
-
-- **Assumption checks:** ...
+- **Tables: Assumption checks:** ...
 
   ![](img/bunching/bunching-5.png){fig-align="center" width=75%}
 
-- **Frequency table:** ...
+- **Tables: Frequency table:** ...
 
   ![](img/bunching/bunching-6.png){fig-align="center" width=40%}
 
-### Plots
-
-The following figures can be requested in the 'Report' section of the interface.
-
-- **Observed vs. expected:** ...
+- **Plots: Observed vs. expected:** ...
 
   ![](img/bunching/bunching-7.png){fig-align="center" width=75%}
 
-- **Histogram:** ...
+- **Plots: Histogram:** ...
 
   ![](img/bunching/bunching-8.png){fig-align="center" width=75%}
 
@@ -62,5 +55,5 @@ The following advanced settings allow you to customize the statistical computati
 
 ![](img/bunching/bunching-9.png){fig-align="center" width=75%}
 
-- **Number of samples:** ...
-- **Seed:** ...
+- **Bootstrap: Number of samples:** ...
+- **Bootstrap: Seed:** ...
