--- a/chap-estimation.qmd
+++ b/chap-estimation.qmd
@@ -1,4 +1,4 @@
-# Ture Value Estimation {#sec-estimation}
+# True Value Estimation {#sec-estimation}
 
 Let's explore an example analysis of true value estimation. To follow along, open the 'Evaluating a Stratified Sample' dataset from the Data Library. Navigate to the top-left menu, click 'Open', then 'Data Library', select '7. Audit', and finally click on the text 'Evaluating a Stratified Sample' (not the green JASP-icon button).
 
@@ -10,12 +10,11 @@ Let's explore an example analysis of true value estimation. To follow along, ope
 
 These are the main settings for the analysis.
 
-- **Population:** ...
-  + **No. items:** ...
-  + **No. units:** ...
+- **Population: No. items:** ...
+- **Population: No. units:** ...
 - **Method:** ...
-- **Explanatory text:** ...
-  + **Confidence:** ...
+- **Display: Explanatory text:** ...
+- **Display: Confidence:** ...
 
 ## Main output
 
@@ -27,18 +26,10 @@ The following settings enable you to expand the report with additional output, s
 
 ![](img/estimation/estimation-4.png){fig-align="center" width=75%}
 
-### Tables
-
-The following tables can be requested in the 'Report' section of the interface.
-
-- **Required sample size:** ...
+- **Tables: Required sample size:** ...
 
   ![](img/estimation/estimation-5.png){fig-align="center" width=75%}
 
-### Plots
-
-The following figures can be requested in the 'Report' section of the interface.
-
-- **Scatter plot:** ...
+- **Plots: Scatter plot:** ...
 
   ![](img/estimation/estimation-6.png){fig-align="center" width=75%}
