--- a/chap-bunching.qmd
+++ b/chap-bunching.qmd
@@ -14,7 +14,7 @@ The interface ...
 
 ![](img/bunching/bunching-2.png){fig-align="center" width=75%}
 
-These are the main settings for the analysis.
+These are the main settings for the analysis:
 
 - **Variable:** ...
 - **Tests: Average frequency** ...
