--- a/chap-selection.qmd
+++ b/chap-selection.qmd
@@ -4,7 +4,7 @@ Let's explore an example of the selection analysis To follow along, open the 'Te
 
 ![](img/selection/selection-1.png){fig-align="center" width=100%}
 
-This will open a dataset with three columns: 'ID', 'bookValue', and 'auditValue'. The 'ID' column represents the identification number of the items in the population. The 'bookValue' column shows the recorded values of the items, while the 'auditValue' column displays the true values. The 'auditValue' column is included for illustrative purposes, as auditors typically know the true values only for the audited sample, not for all items in the population.
+This will open a dataset with 3500 rows and three columns: 'ID', 'bookValue', and 'auditValue'. The 'ID' column represents the identification number of the items in the population. The 'bookValue' column shows the recorded values of the items, while the 'auditValue' column displays the true values. The 'auditValue' column is included for illustrative purposes, as auditors typically know the true values only for the audited sample, not for all items in the population.
 
 ![](img/selection/selection-2.png){fig-align="center" width=100%}
 
