--- a/chap-evaluation.qmd
+++ b/chap-evaluation.qmd
@@ -1,11 +1,60 @@
 # Evaluation {#sec-evaluation}
 
-This page is currently under construction...
+Let's explore an example analysis of an evaluation analysis. To follow along, open the 'Evaluating a Sample' dataset from the Data Library. Navigate to the top-left menu, click 'Open', then 'Data Library', select '7. Audit', and finally click on the text 'Evaluating a Sample' (not the green JASP-icon button).
+
+![](img/evaluation/evaluation-1.png){fig-align="center" width=100%}
+
+This will open a dataset with 90 rows and three columns: 'ID', 'Book.value', 'Audit.value'. The 'ID' column represents the identification number of the items in the population. The 'Book.value' and 'Audit.value' columns show the recorded and true values of the items, respectively.
+
+![](img/evaluation/evaluation-2.png){fig-align="center" width=100%}
 
 ## Main settings
 
+![](img/evaluation/evaluation-3.png){fig-align="center" width=100%}
+
+These are the main settings for the analysis:
+
+- **Sampling objectives: Performance materiality:** ...
+- **Sampling objectives: Minimum precision:** ...
+- **Confidence:** ...
+- **Data type:** ...
+- **Population: No. items:** ...
+- **Population: No. units:** ...
+- **Audit risk model:** ...
+- **Display: Explanatory text:** ...
+
 ## Main output
+
+![](img/evaluation/evaluation-4.png){fig-align="center" width=40%}
 
 ## Report
 
+The following settings enable you to expand the report with additional output, such as tables and figures.
+
+![](img/evaluation/evaluation-5.png){fig-align="center" width=75%}
+
+- **Tables: Misstated items:** ...
+
+  ![](img/evaluation/evaluation-6.png){fig-align="center" width=75%}
+
+- **Tables: Corrections to population:** ...
+
+  ![](img/evaluation/evaluation-7.png){fig-align="center" width=50%}
+
+- **Plots: Sampling objectives:** ...
+
+  ![](img/evaluation/evaluation-8.png){fig-align="center" width=60%}
+
+- **Plots: Estimates:** ...
+
+  ![](img/evaluation/evaluation-9.png){fig-align="center" width=60%}
+
 ## Advanced
+
+The following advanced settings allow you to customize the statistical computations according to your preferences.
+
+![](img/evaluation/evaluation-10.png){fig-align="center" width=75%}
+
+- **Method:** ...
+- **Critical items:** ...
+- **Confidence interval (Alt. hypothesis):** ...
