--- a/chap-selection.qmd
+++ b/chap-selection.qmd
@@ -1,6 +1,6 @@
 # Selection {#sec-selection}
 
-Let's explore an example of the selection analysis To follow along, open the 'Testing for Overstatements' dataset from the Data Library. Navigate to the top-left menu, click 'Open', then 'Data Library', select '7. Audit', and finally click on the text 'Testing for Overstatements' (not the green JASP-icon button).
+Let's explore an example of a selection analysis. To follow along, open the 'Testing for Overstatements' dataset from the Data Library. Navigate to the top-left menu, click 'Open', then 'Data Library', select '7. Audit', and finally click on the text 'Testing for Overstatements' (not the green JASP-icon button).
 
 ![](img/selection/selection-1.png){fig-align="center" width=100%}
 
